Correct z-index in gallery modal of the band

--- a/src/main/webapp/css/bandStyle.css
+++ b/src/main/webapp/css/bandStyle.css
@@ -8,7 +8,7 @@
 #bandStyle .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   padding-top: 100px;
   left: 0;
   top: 0;
